# hermes_bedrock_agent

./: .env.example  .gitignore  .hermes.md  NEPTUNE_FIX_GUIDE.md  README.md  pyproject.toml
app/doc_pipeline/: __main__.py  config.py
app/dual_rag/: __init__.py  answer_generator.py  config.py  (+1 more)
docs/: DUAL_RAG_ARCHITECTURE_CODE_REVIEW.md  REFACTOR_PLAN.md  demo_graph_ap_flow.md  demo_graph_ap_flow.reactflow.json  demo_graph_journal_base.md  demo_graph_journal_base.reactflow.json  demo_graph_payment_req.html  demo_graph_payment_req.reactflow.json  demo_q4_semantic_map.html  demo_q4_semantic_map.reactflow.json  e2e_murata_test.md  graph_pipeline_report.md  graph_schema.md  msha_dss_root_cause_report.md  murata_rebuild_r10_full_readback_validation_report.md  murata_rebuild_r10_import_failures_report.md  murata_rebuild_r10_next_step_recommendation.md  murata_rebuild_r10_rollback_plan.md  murata_rebuild_r11_debug_trace_report.md  murata_rebuild_r11_next_step_recommendation.md  murata_rebuild_r11_qa_answers_report.md  murata_rebuild_r11_qa_evaluation_report.md  murata_rebuild_r12_demo_packaging_report.md  murata_rebuild_r12_next_step_recommendation.md  murata_rebuild_r12_visualization_report.md  murata_rebuild_r5_retrieval_quality_report.md  murata_rebuild_r6_next_step_recommendation.md  murata_rebuild_r6_q4_semantic_map_preview.md  murata_rebuild_r6_quality_gate_decision.md  murata_rebuild_r6_relation_quality_report.md  murata_rebuild_r6_strict_audit_report.md  murata_rebuild_r7_next_step_recommendation.md  murata_rebuild_r7_normalization_report.md  murata_rebuild_r8_import_validation_report.md  murata_rebuild_r8_next_step_recommendation.md  murata_rebuild_r9_import_failures_report.md  murata_rebuild_r9_rollback_plan.md  murata_rebuild_r9_sample_readback_validation_report.md  murata_rebuild_vlm_quality_report.md  murata_retrieval_quality_issues.md  (+5 more)
flowchart_to_mermaid/: __main__.py  config.py
hermes_session_viewer/: README.md  pyproject.toml
hermes_session_viewer/src/hermes_session_viewer/: aggregator.py  cli.py  db_loader.py  html_renderer.py  i18n.py  loader.py  natural_language.py  parser.py  utils.py
hermes_session_viewer/tests/: test_classifier.py  test_loader.py  test_timestamp.py
prompts/: semantic_map_v4.3_universal.md
scripts/: build_business_semantic_graph_v2.py  build_implementation_graph_v2.py  build_unified_evidence_store_v1.py  check_s3_access.py  compare_excel_markdown_reference.py  convert_flowchart.py  demo_graph_extraction.py  demo_qa_evidence_flow.py  embed_and_qa_validate.py  enrich_i18n.py  excel_visual_parse_v2.py  export_excel_graph_html_v2.py  extract_all_mappings.py  fix_screenshots.py  fix_screenshots_fast.py  fresh_parse_pipeline.py  ingest_wb2_flowchart.py  integrate_vlm_evidence.py  link_graph_evidence_v2.py  load_excel_neptune_v2.py  load_neptune_v2.py  migrate_yangma_v2_structure.py  neptune_gremlin_writer.py  parse_complex_excel_project_v1.py  phase1_extract.py  phase1_full_evidence.py  phase2_embed.py  phase3_import_evidence.py  phase3_neptune_v2.py  qa_e2e_test_v2.py  query_demo.py  render_sheets_pdf.py  reparse_pipeline.py  resolve_and_filter_graph_v2.py  review_excel_evidence_quality_v2.py  run_build_kb.py  run_excel_parse_pipeline.py  run_neptune_query.py  run_qa.py  test_evidence_coverage_query_v2.py  (+7 more)
tests/: smoke_test_answer_mode.py  test_answer_generator.py  test_api_routes.py  test_bedrock_kb_retriever.py  test_build_kb_unified.py  test_chunk_id_generation.py  test_chunker_strategies.py  test_chunking.py  test_clients.py  test_config.py  test_context_builder.py  test_dry_run.py  test_e2e_murata_pipeline.py  test_e2e_scripts.py  test_edge_promotion.py  test_embedding.py  test_enrichment_optional.py  test_entity_normalizer.py  test_file_router.py  test_frontmatter_chunking.py  test_fusion.py  test_graph_display.py  test_graph_expansion.py  test_graph_extraction.py  test_graph_quality_review.py  test_graph_retriever.py  test_graph_schema.py  test_graph_validator.py  test_graphrag.py  test_hybrid_retrieval.py  test_i18n_enricher_live.py  test_i18n_enrichment.py  test_ingestion.py  test_intent_router.py  test_kb_client.py  test_knowledge_store.py  test_lancedb_store.py  test_mermaid_generator.py  test_mermaid_phase2.py  test_mermaid_renderer.py  (+28 more)
(+611 files in other folders)
