[project]
name = "hermes_bedrock_agent"
version = "1.0.0"
description = "Enterprise document parsing + dual-RAG pipeline: S3 → Excel/PDF → VLM markdown → LanceDB + Neptune → QA"
requires-python = ">=3.11"
dependencies = [
  "boto3",
  "botocore",
  "python-dotenv",
  "typer",
  "rich",
  "pydantic>=2.0",
  "Pillow>=10.0",
  "lancedb>=0.20",
  "pyarrow",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pytest-mock"]
pdf = ["pdf2image", "pypdf>=4.0"]
graph = ["gremlinpython>=3.8.1"]

[project.scripts]
hermes = "hermes_bedrock_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_bedrock_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.uv.sources]
hermes-agent = { path = "../hermes-agent", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.12",
]
